--- a/_drafts/2016-01-09-week-1-yeah.markdown
+++ b/_drafts/2016-01-09-week-1-yeah.markdown
@@ -2,5 +2,6 @@
 layout: post
 title:  "Starting 2016"
 date:   2016-01-03 16:00:00 -0800
+comments: true
 categories: life update, work, tech, Hackbright
 ---
