Corrected a typo in post 2

--- a/_posts/2016-01-09-week-1-yeah.markdown
+++ b/_posts/2016-01-09-week-1-yeah.markdown
@@ -22,7 +22,7 @@ I find that actually, in many ways, I enjoy "navigating" in pair programming mor
 
 That being said, I think that I have been falling into the trap of "drive-igating" (driving and navigating). It's hard not to get super excited about an idea, get carried away with it, and want to get it out on the screen instantly. For this coming week of Hackbright, I'll be practicing more "pair programming mindfulness" and my goal is to set each pair programming session up with conversations about pairing style and also as the exercises we are working on become more advanced, conversing more with my partner and setting up a gameplan/pseudocoding in advance more often.
 
-It's a strange thought to articulate, but I feel like pair programming makes the exercises and the work we do more "language agnostic" and we're really learning to solve problems with others beyond Python. Pair programming also forces us to discuss our logic and ideas with our partners constantly and keeping those lines of communication open, so it forces us to understand the code on a higher level than just the syntax. [It's like maximizing utility of consumers given a budget constraint in an economic model.](https://en.wikipedia.org/wiki/Lagrange_multiplier#Economics) We use the Lagrangian. In order to reach that calculation, we need to first understand what "utility" and "budget" mean on a logical level then we apply the Lagrangian as a mathematical tool for us to get to the solutions we want. If I couldn't explain "a budget is a limit on how much a consumer can spend" or "utility is basically enjoyment/positive gains from 'stuff' cosumers buy", then I couldn't say "hey, let's use that calculus thingy that maximizes/minimizes consumer happiness given their budget constraints" (beyond just "my teacher/cat/parent/friend said so"). **Talking about code colloquially is an extremely valuable learning point and I don't think it could be achieved in any better way than pair programming and working closely with our peers.**
+It's a strange thought to articulate, but I feel like pair programming makes the exercises and the work we do more "language agnostic" and we're really learning to solve problems with others beyond Python. Pair programming also forces us to discuss our logic and ideas with our partners constantly and keeping those lines of communication open, so it forces us to understand the code on a higher level than just the syntax. [It's like maximizing utility of consumers given a budget constraint in an economic model.](https://en.wikipedia.org/wiki/Lagrange_multiplier#Economics) We use the Lagrangian. In order to reach that calculation, we need to first understand what "utility" and "budget" mean on a logical level then we apply the Lagrangian as a mathematical tool for us to get to the solutions we want. If I couldn't explain "a budget is a limit on how much a consumer can spend" or "utility is basically enjoyment/positive gains from 'stuff' consumers buy", then I couldn't say "hey, let's use that calculus thingy that maximizes/minimizes consumer happiness given their budget constraints" (beyond just "my teacher/cat/parent/friend said so"). **Talking about code colloquially is an extremely valuable learning point and I don't think it could be achieved in any better way than pair programming and working closely with our peers.**
 
 <!--Surviving in a New Environment + Canadiana-->
 Switching gears a little bit, I wanted to reflect on adapting to the new environment and lifestyle. I did laundry at an actual coin laundromat for the first time ever! I realize that sounds extremely spoiled of me to say, and to clarify, my family has done coin laundry in the past when we were traveling, but this is a new experience for me as an individual... *anyway*, I am now the proud owner of $7.25 in quarters, which I plan on investing in future clean laundry. Beyond the laundry adventure, I found that even though life in San Francisco isn't vastly different from life in Toronto, I still feel that I bring my "Canadian-ness"/"Canadiana" around with me. I think it's just little things I say and do that hint at it, like jumping out of a bus seat the second an old person steps on or using the word "washroom" instead of "restroom", but whatever it is, I rarely think about it unless I'm outside of Canada. It's hard to describe what being Canadian is when you're in Canada, but when I'm elsewhere, I feel like there is a red maple leaf painted on my forehead. I am obviously imagining it and no one can tell just by looking at me, but it's just a peculiar feeling that I carry around with me as I go about my day-to-day life. 
