Fixed typo in latest post

--- a/_posts/2016-01-09-week-1-yeah.markdown
+++ b/_posts/2016-01-09-week-1-yeah.markdown
@@ -28,7 +28,7 @@ It's a strange thought to articulate, but I feel like pair programming makes the
 Switching gears a little bit, I wanted to reflect on adapting to the new environment and lifestyle. I did laundry at an actual coin laundromat for the first time ever! I realize that sounds extremely spoiled of me to say, and to clarify, my family has done coin laundry in the past when we were traveling, but this is a new experience for me as an individual... *anyway*, I am now the proud owner of $7.25 in quarters, which I plan on investing in future clean laundry. Beyond the laundry adventure, I found that even though life in San Francisco isn't vastly different from life in Toronto, I still feel that I bring my "Canadian-ness"/"Canadiana" around with me. I think it's just little things I say and do that hint at it, like jumping out of a bus seat the second an old person steps on or using the word "washroom" instead of "restroom", but whatever it is, I rarely think about it unless I'm outside of Canada. It's hard to describe what being Canadian is when you're in Canada, but when I'm elsewhere, I feel like there is a red maple leaf painted on my forehead. I am obviously imagining it and no one can tell just by looking at me, but it's just a peculiar feeling that I carry around with me as I go about my day-to-day life. 
 
 <!--Date Night-->
-Since a part of our Hackbright education is the concept of "self-care", I've henceforth declared Saturday evening as a time when I explore the city and don't take any work with me (that's right, the laptop is staying home!). So, on my first official "Doria date-night", I visited the [Make Store Pop-Up](http://makerfaire.com/popupSF/), purchased a shiny new [Raspberry Pi](http://www.makershed.com/products/make-getting-started-with-raspberry-pi-deluxe-kit) starter kit (yay, more coding!) and went for Vietnamese food at [Tu Lan](http://www.yelp.com/biz/t%C3%BA-lan-san-francisco-4). I can't speak to their pho, but their BÚN CH GIÒ THT NNG (Pork Kebab, Imperial Roll & Rice Noodle), expecially the Imperial Roll part, is to die for! I mean that somewhat literally, because then I took a walk to my bus stop through the Tenderloin, a word which is now defined in my mind as "an area where crack cocaine is smoked and/or sold every square metre". Yes, metric is used here because it is a highly scientific measurement made through the observations of me, a sample size of one. I am, of course, exaggerating for effect, there are many wonderful, charming things about the Tenderloin, but I will still be avoiding walks through the neighborhood at night for the most part.
+Since a part of our Hackbright education is the concept of "self-care", I've henceforth declared Saturday evening as a time when I explore the city and don't take any work with me (that's right, the laptop is staying home!). So, on my first official "Doria date-night", I visited the [Make Store Pop-Up](http://makerfaire.com/popupSF/), purchased a shiny new [Raspberry Pi](http://www.makershed.com/products/make-getting-started-with-raspberry-pi-deluxe-kit) starter kit (yay, more coding!) and went for Vietnamese food at [Tu Lan](http://www.yelp.com/biz/t%C3%BA-lan-san-francisco-4). I can't speak to their pho, but their BÚN CH GIÒ THT NNG (Pork Kebab, Imperial Roll & Rice Noodle), especially the Imperial Roll part, is to die for! I mean that somewhat literally, because then I took a walk to my bus stop through the Tenderloin, a word which is now defined in my mind as "an area where crack cocaine is smoked and/or sold every square metre". Yes, metric is used here because it is a highly scientific measurement made through the observations of me, a sample size of one. I am, of course, exaggerating for effect, there are many wonderful, charming things about the Tenderloin, but I will still be avoiding walks through the neighborhood at night for the most part.
 
 <!--New Site Features-->
 Lastly, I made some quick updates to the site — most notably I've set up the comments via Disqus and implemented Google Analytics, so I can see where all five of my readers are coming from (kidding, I know it's just you, mom!). I am new to both of these functions — Disqus and I are still working through some of our issues, such as customizing the share function, but if anyone has any advice on these features, I would love to hear from you!
