--- a/_posts/2016-01-14-week-2.markdown
+++ b/_posts/2016-01-14-week-2.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Week 2 - Object Oriented Life Planning"
+title:  "Hackbright Week 2"
 date:   2016-01-17 10:00:00 -0800
 comments: true
 categories: life update, work, Hackbright
