--- a/_posts/2016-01-03-starting-2016.markdown
+++ b/_posts/2016-01-03-starting-2016.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "Starting 2016"
 date:   2016-01-03 16:00:00 -0800
 comments: true
-categories: life-update work Hackbright
+categories: life-update Hackbright
 ---
 A quick introduction:
 
